--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
+    "qs": "^6.9.1",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
