--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-bus": "^1.2.1",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
+    "vue-touch": "^2.0.0-beta.4",
+    "vue2-touch-events": "^2.2.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
