--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "dayjs": "^1.8.21",
     "element-ui": "^2.4.5",
     "qs": "^6.9.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-bus": "^1.2.1",
+    "vue-cookies": "^1.7.0",
+    "vue-infinite-loading": "^2.4.4",
     "vue-lazyload": "^1.3.3",
+    "vue-masonry": "^0.11.8",
     "vue-router": "^3.1.5",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^2.2.1",
