--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.8.28",
     "element-ui": "^2.13.2",
+    "prerender-spa-plugin": "^3.4.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
@@ -18,6 +19,7 @@
     "vue-infinite-loading": "^2.4.5",
     "vue-lazyload": "^1.3.3",
     "vue-masonry": "^0.11.8",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.3.4",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^2.2.1",
