--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "pixiviz",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@xunlei/vue-context-menu": "^1.0.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.29",
     "element-ui": "^2.13.2",
-    "prerender-spa-plugin": "^3.4.0",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
@@ -31,7 +31,8 @@
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "babel-plugin-component": "^1.1.1",
-    "imagemin-webpack-plugin": "^2.4.2",
+    "compression-webpack-plugin": "^4.0.0",
+    "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "vue-cli-plugin-element": "^1.0.1",
