--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
     "IMAGE_PROXY_HOST": "i.pixiv.cat",
+    "DOWNLOAD_HOST": "pixiv.pwp.workers.dev",
     "PIXIVIC_API": "https://api.pixivic.com",
     "OWN_API": "/api/v1"
 }
