--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.5.6",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "clipboard-polyfill": "^3.0.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.8.29",
     "element-ui": "^2.13.2",
