--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.8.31",
     "element-ui": "^2.13.2",
     "qs": "^6.9.4",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-cookies": "^1.7.3",
@@ -26,11 +27,14 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
     "@vue/cli-plugin-router": "^4.4.6",
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "babel-plugin-component": "^1.1.1",
+    "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^4.0.0",
     "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
