fix: ci workflow

--- a/.github/workflows/auto-build-and-deploy.yml
+++ b/.github/workflows/auto-build-and-deploy.yml
@@ -2,9 +2,8 @@ name: Auto build & deploy when master changed
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: 
+    - master
 
 jobs:
   build:
