--- a/src/config.json
+++ b/src/config.json
@@ -2,5 +2,6 @@
     "IMAGE_PROXY_HOST": "i.pixiv.cat",
     "DOWNLOAD_HOST": "pixiv.pwp.workers.dev",
     "OWN_API": "/api/v1",
-    "USE_GUIDE": "https://io.backrunner.top/2020/07/27/Pixiviz%E9%A3%9F%E7%94%A8%E6%8C%87%E5%8D%97.html"
+    "USE_GUIDE": "https://io.backrunner.top/2020/07/27/Pixiviz%E9%A3%9F%E7%94%A8%E6%8C%87%E5%8D%97.html",
+    "DONATE": "https://afdian.net/@backrunner"
 }
