--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
   "name": "pixiviz",
-  "version": "1.14.1",
+  "version": "1.14.2",
   "private": true,
   "scripts": {
+    "start": "npm run serve",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "analyze": "cross-env ANALYZE=true vue-cli-service build"
   },
   "dependencies": {
-    "@sentry/browser": "^5.21.1",
-    "@sentry/integrations": "^5.21.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.0",
     "clipboard-polyfill": "^3.0.1",
     "core-js": "^3.6.5",
-    "dayjs": "^1.8.33",
+    "dayjs": "^1.9.4",
     "element-ui": "^2.13.2",
     "qs": "^6.9.4",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-axios": "^2.1.5",
-    "vue-cookies": "^1.7.3",
+    "vue": "^2.6.12",
+    "vue-axios": "^3.1.3",
+    "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
     "vue-lazyload": "^1.3.3",
     "vue-masonry": "^0.11.8",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.4.3",
+    "vue-router": "^3.4.8",
     "vue-touch": "^2.0.0-beta.4",
-    "vue2-touch-events": "^2.2.1",
+    "vue2-touch-events": "^2.3.2",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@gfx/zopfli": "^1.0.15",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-pwa": "^4.5.3",
-    "@vue/cli-plugin-router": "^4.5.3",
-    "@vue/cli-plugin-vuex": "^4.5.3",
-    "@vue/cli-service": "^4.5.3",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-pwa": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-vuex": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "babel-plugin-component": "^1.1.1",
     "brotli-webpack-plugin": "^1.1.0",
-    "compression-webpack-plugin": "^4.0.1",
+    "compression-webpack-plugin": "^6.0.5",
+    "cross-env": "^7.0.2",
     "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
     "> 1%",
