--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "npm run serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "analyze": "cross-env ANALYZE=true vue-cli-service build"
+    "analyze": "cross-env ANALYZE=true vue-cli-service build",
+    "gen:anno": "node ./tools/announcementGen.js",
+    "push:anno": "cross-env NODE_ENV=prod node ./tools/announcementGen.js",
+    "push:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementUpload.js"
   },
   "dependencies": {
     "@pwp-app/better-element-ui": "^2.14.0-fix-1",
@@ -43,6 +46,7 @@
     "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "qiniu": "^7.3.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.12"
   },
