--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.15.1",
+  "version": "1.15.2",
   "private": true,
   "scripts": {
     "start": "npm run serve",
@@ -8,12 +8,13 @@
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
     "analyze": "cross-env ANALYZE=true vue-cli-service build",
-    "gen:anno": "node ./tools/announcementGen.js",
+    "gen:anno": "cross-env NODE_ENV=prod node ./tools/announcementGen.js",
+    "gen:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementGen.js",
     "gen:proxy": "node ./tools/proxyConfigGen.js",
     "upload:anno": "npm run push:anno",
     "upload:anno-dev": "npm run push:anno-dev",
     "upload:proxy": "npm run push:proxy",
-    "upload:proxy-dev": "npm run push:dev",
+    "upload:proxy-dev": "npm run push:proxy-dev",
     "push:anno": "cross-env NODE_ENV=prod node ./tools/announcementUpload.js",
     "push:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementUpload.js",
     "push:proxy": "cross-env NODE_ENV=prod node ./tools/proxyConfigUpload.js",
