--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@pwp-app/better-element-ui": "^2.14.0-fix-1",
+    "@pwp-app/vue-lazyload": "^1.3.3-fix-1",
     "axios": "^0.21.0",
     "clipboard-polyfill": "^3.0.1",
     "core-js": "^3.7.0",
@@ -32,7 +33,6 @@
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
-    "vue-lazyload": "^1.3.3",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.4.9",
     "vue-touch": "^2.0.0-beta.4",
