--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
-  ]
+    "last 1 versions",
+    "last 4 Android versions",
+    "last 3 iOS versions"
+  ],
 }
