--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.16.1",
+  "version": "1.16.1-f1",
   "private": true,
   "scripts": {
     "start": "npm run serve",
