feat: add cache purge to workflow

--- a/.github/workflows/auto-build-and-deploy.yml
+++ b/.github/workflows/auto-build-and-deploy.yml
@@ -2,33 +2,41 @@ name: Auto build & deploy when master changed
 
 on:
   push:
-    branches: 
-    - master
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
-  
+
     steps:
-    - name: Checkout master
-      uses: actions/checkout@v2
+      - name: Checkout master
+        uses: actions/checkout@v2
 
-    - name: Setup node
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: '14'
+      - name: Setup node
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: "14"
 
-    - name: Build project
-      run: npm install && npm run build
-    
-    - name: Clean repo
-      run: git reset --hard
-    
-    - name: Deploy to remote
-      uses: SamKirkland/FTP-Deploy-Action@3.1.1
-      with:
-        ftp-server: ${{ secrets.DEPLOY_REMOTE_SERVER }}
-        ftp-username: ${{ secrets.DEPLOY_REMOTE_USER }}
-        ftp-password: ${{ secrets.DEPLOY_REMOTE_PASSWORD }}
-        local-dir: dist
-        git-ftp-args: --insecure
+      - name: Build project
+        run: npm install && npm run build
+
+      - name: Clean repo
+        run: git reset --hard
+
+      - name: Deploy to remote
+        uses: SamKirkland/FTP-Deploy-Action@3.1.1
+        with:
+          ftp-server: ${{ secrets.DEPLOY_REMOTE_SERVER }}
+          ftp-username: ${{ secrets.DEPLOY_REMOTE_USER }}
+          ftp-password: ${{ secrets.DEPLOY_REMOTE_PASSWORD }}
+          local-dir: dist
+          git-ftp-args: --insecure
+
+      - name: Purge Cloudflare cache
+        uses: jakejarvis/cloudflare-purge-action@master
+        env:
+          # Zone is required by both authentication methods
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+          PURGE_URLS: '["https://pixiviz.pwp.app/index.html", "https://pixiviz.pwp.app/service-worker.js"]'
