--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "1.16.1-f4",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
-    "dev": "npm run serve",
-    "dev:built": "npm run build && http-server ./dist -b",
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
+    "test:e2e": "vue-cli-service test:e2e",
     "analyze": "cross-env ANALYZE=true vue-cli-service build",
-    "gen:ver": "node ./tools/processVersion.js",
+    "dev": "npm run serve",
+    "dev:built": "npm run build && http-server ./dist -b",
     "gen:anno": "cross-env NODE_ENV=prod node ./tools/announcementGen.js",
     "gen:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementGen.js",
     "gen:proxy": "node ./tools/proxyConfigGen.js",
-    "upload:anno": "npm run push:anno",
-    "upload:anno-dev": "npm run push:anno-dev",
-    "upload:proxy": "npm run push:proxy",
-    "upload:proxy-dev": "npm run push:proxy-dev",
+    "gen:ver": "node ./tools/processVersion.js",
     "push:anno": "cross-env NODE_ENV=prod node ./tools/announcementUpload.js",
     "push:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementUpload.js",
     "push:proxy": "cross-env NODE_ENV=prod node ./tools/proxyConfigUpload.js",
-    "push:proxy-dev": "cross-env NODE_ENV=dev node ./tools/proxyConfigUpload.js"
+    "push:proxy-dev": "cross-env NODE_ENV=dev node ./tools/proxyConfigUpload.js",
+    "start": "npm run serve",
+    "upload:anno": "npm run push:anno",
+    "upload:anno-dev": "npm run push:anno-dev",
+    "upload:proxy": "npm run push:proxy",
+    "upload:proxy-dev": "npm run push:proxy-dev"
   },
   "dependencies": {
     "@pwp-app/better-element-ui": "^2.14.0-fix-1",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.9",
     "@vue/cli-plugin-pwa": "^4.5.9",
     "@vue/cli-plugin-router": "^4.5.9",
     "@vue/cli-plugin-vuex": "^4.5.9",
@@ -51,6 +53,7 @@
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.2",
+    "cypress": "^6.0.0",
     "image-webpack-loader": "^6.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
