--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@pwp-app/better-element-ui": "^2.14.0-fix-1",
+    "@pwp-app/vue-context-menu": "^1.0.0",
     "@pwp-app/vue-lazyload": "^1.3.3-fix-1",
     "axios": "^0.21.0",
     "clipboard-polyfill": "^3.0.1",
@@ -35,7 +36,6 @@
     "vue": "^2.6.12",
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
-    "vue-meta": "^2.4.0",
     "vue-router": "^3.4.9",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^2.3.2",
