--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clipboard-polyfill": "^3.0.2",
     "core-js": "^3.7.0",
     "dayjs": "^1.10.4",
+    "qrcode-svg": "^1.1.0",
     "qs": "^6.9.6",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
