--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.18.3-f2",
+  "version": "1.19.0",
   "private": true,
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
@@ -8,6 +8,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "analyze": "cross-env ANALYZE=true vue-cli-service build",
     "dev": "npm run serve",
+    "dev:online": "cross-env NODE_DEV=production npm run serve",
     "dev:built": "npm run build && http-server ./dist -b",
     "gen:anno": "cross-env NODE_ENV=prod node ./tools/announcementGen.js",
     "gen:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementGen.js",
