--- a/src/config.json
+++ b/src/config.json
@@ -1,15 +1,12 @@
 {
   "image_proxy_host": {
-    "pixiv-image.pwp.link": 0.7,
-    "pixiv-image-jp.pwp.link": 0.3
+    "pixiv-image.pwp.link": 0.6,
+    "pixiv-image-jp.pwp.link": 0.4
   },
-  "download_proxy_host": {
-    "pixiv-image-jp.pwp.link": 0.2,
-    "pixiv-image.pwp.link": 0.8
-  },
+  "download_proxy_host": "pixiv-image-jp.pwp.link",
   "api_prefix": "/api/v1",
   "guide_url": "https://io.backrunner.top/2020/07/27/Pixiviz%E9%A3%9F%E7%94%A8%E6%8C%87%E5%8D%97.html",
   "donate_url": "https://afdian.net/@backrunner",
-  "landing_bg_id": 76443705,
-  "landing_bg_name": "お盆休み"
+  "landing_bg_id": 84166210,
+  "landing_bg_name": "まだなつ"
 }
