--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.20.4",
+  "version": "1.20.5",
   "private": true,
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
@@ -31,8 +31,9 @@
     "@pwp-app/vue-lazyload": "^1.3.3-fix-1",
     "axios": "^0.21.1",
     "clipboard-polyfill": "^3.0.3",
-    "core-js": "^3.12.1",
-    "dayjs": "^1.10.4",
+    "core-js": "^3.13.0",
+    "dayjs": "^1.10.5",
+    "hash-wasm": "^4.6.0",
     "level-js": "^6.0.0",
     "levelup": "^5.0.0",
     "qrcode-svg": "^1.1.0",
