--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.13.1",
     "dayjs": "^1.10.5",
+    "dexie": "^3.0.3",
     "hash-wasm": "^4.6.0",
     "level-js": "^6.0.0",
     "levelup": "^5.0.0",
