--- a/src/config.json
+++ b/src/config.json
@@ -7,7 +7,7 @@
   "donate_url": "https://afdian.net/@backrunner",
   "landing_bg_id": 84165367,
   "landing_bg_name": "木陰",
-  "frontjs": {
+  "statistics": {
     "trust_host": "pixiviz.pwp.app"
   }
 }
