feat: move announcement feed to config

--- a/src/config.json
+++ b/src/config.json
@@ -7,5 +7,6 @@
   "donate_url": "https://afdian.net/@backrunner",
   "landing_bg_id": 84165367,
   "landing_bg_name": "木陰",
-  "trust_host": "pixiviz.pwp.app"
+  "trust_host": "pixiviz.pwp.app",
+  "announcement_feed": "https://config.backrunner.top/pixiviz/announcement.json"
 }
