feat: get og tags when initializing

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
+  "website_url": "https://pixiviz.pwp.app",
   "image_proxy_host": "pixiv-image.pwp.link",
   "download_proxy_host": "pixiv-image.pwp.link",
   "remote_conf_url": "https://cfs.tigo.pwp.app/pixiviz-prod.json",
