fix: use public proxy for og image

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,6 @@
 {
   "website_url": "https://pixiviz.pwp.app",
+  "public_proxy": "i.pixiv.cat",
   "image_proxy_host": "pixiv-image.pwp.link",
   "download_proxy_host": "pixiv-image.pwp.link",
   "remote_conf_url": "https://cfs.tigo.pwp.app/pixiviz-prod.json",
