--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.24.0",
+  "version": "1.24.1",
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
@@ -28,6 +28,7 @@
     "@pwp-app/better-element-ui": "^2.15.3",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
+    "@vue/composition-api": "^1.0.4",
     "axios": "^0.21.1",
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.16.0",
@@ -43,6 +44,7 @@
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.2",
+    "vue-share-popup": "^0.3.2",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2"
