feat: add trust host and move announcement to tigo

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "gen:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementGen.js",
     "gen:proxy": "node ./tools/proxyConfigGen.js",
     "gen:ver": "node ./tools/processVersion.js",
-    "push:anno": "cross-env NODE_ENV=prod node ./tools/announcementUpload.js",
-    "push:anno-dev": "cross-env NODE_ENV=dev node ./tools/announcementUpload.js",
+    "push:anno": "tigo cfs deploy pixiviz-anno-prod",
+    "push:anno-dev": "tigo cfs deploy pixiviz-anno-dev",
     "push:proxy": "cross-env NODE_ENV=prod node ./tools/proxyConfigUpload.js",
     "push:proxy-dev": "cross-env NODE_ENV=dev node ./tools/proxyConfigUpload.js",
+    "push:config": "tigo cfs deploy pixiviz-prod",
     "start": "npm run serve",
     "upload:anno": "npm run push:anno",
     "upload:anno-dev": "npm run push:anno-dev",
