--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.24.2",
+  "version": "1.24.3",
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
@@ -41,6 +41,7 @@
     "qrcode-svg": "^1.1.0",
     "qs": "^6.10.1",
     "register-service-worker": "^1.7.2",
+    "seedrandom": "^3.0.5",
     "vue": "^2.6.14",
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
