--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "f2elint-fix": "f2elint fix"
   },
   "dependencies": {
-    "@pwp-app/better-element-ui": "^2.15.5",
+    "@pwp-app/better-element-ui": "^2.15.6-prev-1",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
-    "@vue/composition-api": "^1.1.2",
+    "@vue/composition-api": "^1.1.3",
     "axios": "^0.21.1",
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.16.2",
