--- a/src/config.json
+++ b/src/config.json
@@ -9,5 +9,8 @@
   "donate_url": "https://afdian.net/@backrunner",
   "landing_bg_id": 63295289,
   "trust_host": "pixiviz.pwp.app",
-  "announcement_feed": "https://cfs.tigo.pwp.app/pixiviz-anno-prod.json"
+  "announcement_feed": "https://cfs.tigo.pwp.app/pixiviz-anno-prod.json",
+  "maintain": {
+    "enable": false
+  }
 }
