--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.24.7",
+  "version": "1.25.0",
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
@@ -26,6 +26,7 @@
     "f2elint-fix": "f2elint fix"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.4.2",
     "@pwp-app/better-element-ui": "^2.15.6-prev-1",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
