--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,11 @@
   "image_proxy_host": "pixiv-image.pwp.link",
   "download_proxy_host": "pixiv-image.pwp.link",
   "remote_conf_url": "https://cfs.tigo.pwp.app/pixiviz-prod.json",
-  "api_prefix": ["/api/v1", "https://pixiviz-api-us.pwp.link/v1"],
+  "api_prefix": [
+    "/api/v1",
+    "https://pixiviz-api-hk.pwp.link/v1",
+    "https://pixiviz-api-us.pwp.link/v1"
+  ],
   "guide_url": "https://io.backrunner.top/2020/07/27/Pixiviz%E9%A3%9F%E7%94%A8%E6%8C%87%E5%8D%97.html",
   "donate_url": "https://afdian.net/@backrunner",
   "landing_bg_id": 94067980,
