--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
-    "@pwp-app/better-element-ui": "^2.15.6-prev-1",
+    "@pwp-app/better-element-ui": "^2.15.7",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
     "@vue/composition-api": "^1.4.0",
@@ -47,7 +47,7 @@
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.3",
-    "vue-share-popup": "^0.4.1",
+    "vue-share-popup": "^0.4.2",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2"
@@ -67,7 +67,6 @@
     "cross-env": "^7.0.3",
     "cypress": "^6.9.1",
     "f2elint": "^1.2.3",
-    "image-webpack-loader": "^7.0.1",
     "less": "^3.13.1",
     "less-loader": "^6.2.0",
     "qiniu": "^7.4.0",
