--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jszip": "^3.7.1",
     "level-js": "^6.1.0",
     "levelup": "^5.1.1",
+    "pixland": "file:../pixland-lib",
     "qrcode-svg": "^1.1.0",
     "qs": "^6.10.2",
     "register-service-worker": "^1.7.2",
