--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@pwp-app/better-element-ui": "^2.15.7",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
-    "@vue/composition-api": "^1.4.4",
+    "@vue/composition-api": "^1.4.5",
     "axios": "^0.24.0",
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.20.3",
@@ -40,6 +40,7 @@
     "jszip": "^3.7.1",
     "level-js": "^6.1.0",
     "levelup": "^5.1.1",
+    "lodash-es": "^4.17.21",
     "pixland": "file:../pixland-lib",
     "qrcode-svg": "^1.1.0",
     "qs": "^6.10.3",
