feat: add clear remote history

--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "axios": "^0.24.0",
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.21.0",
+    "crc": "^4.1.0",
     "dayjs": "^1.10.7",
     "hash-wasm": "^4.9.0",
     "jszip": "^3.7.1",
     "level-js": "^6.1.0",
     "levelup": "^5.1.1",
     "lodash-es": "^4.17.21",
-    "pixland": "^0.0.3",
+    "pixland": "^0.0.7",
     "qrcode-svg": "^1.1.0",
     "qs": "^6.10.3",
     "register-service-worker": "^1.7.2",
