--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pixland": "^0.0.7",
     "qrcode-svg": "^1.1.0",
     "qs": "^6.10.3",
+    "regex-go": "^0.4.0",
     "register-service-worker": "^1.7.2",
     "seedrandom": "^3.0.5",
     "vue": "^2.6.14",
