--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixiviz",
-  "version": "1.26.1",
+  "version": "1.27.0",
   "scripts": {
     "serve": "node ./tools/processVersion.js && vue-cli-service serve",
     "build": "node ./tools/processVersion.js && vue-cli-service build",
@@ -27,12 +27,13 @@
     "compress-svg": "npx svgo ./src/assets/icons"
   },
   "dependencies": {
+    "@backrunner/qrcode-svg": "^1.2.0",
     "@better-scroll/core": "^2.4.2",
     "@pwp-app/better-element-ui": "^2.15.7",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
     "@vue/composition-api": "^1.4.9",
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "clipboard-polyfill": "^3.0.3",
     "core-js": "^3.21.1",
     "crc": "^4.1.0",
@@ -42,8 +43,7 @@
     "level-js": "^6.1.0",
     "levelup": "^5.1.1",
     "lodash-es": "^4.17.21",
-    "pixland": "^0.0.7",
-    "qrcode-svg": "^1.1.0",
+    "pixland": "^0.0.8",
     "qs": "^6.10.3",
     "regex-go": "^0.4.0",
     "register-service-worker": "^1.7.2",
@@ -52,7 +52,7 @@
     "vue-cookies": "^1.7.4",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.5.3",
-    "vue-share-popup": "^0.4.2",
+    "vue-share-popup": "^0.4.3",
     "vue-touch": "^2.0.0-beta.4",
     "vue2-touch-events": "^3.2.2",
     "vuex": "^3.6.2"
@@ -60,20 +60,22 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@gfx/zopfli": "^1.0.15",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.15",
-    "@vue/cli-plugin-pwa": "^4.5.15",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "@vue/cli-plugin-vuex": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-e2e-cypress": "^5.0.1",
+    "@vue/cli-plugin-pwa": "^5.0.1",
+    "@vue/cli-plugin-router": "^5.0.1",
+    "@vue/cli-plugin-vuex": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
     "babel-plugin-component": "^1.1.1",
     "brotli-webpack-plugin": "^1.1.0",
-    "compression-webpack-plugin": "^6.1.1",
+    "compression-webpack-plugin": "^9.2.0",
     "cross-env": "^7.0.3",
     "cypress": "^6.9.1",
     "f2elint": "^1.2.3",
-    "less": "^3.13.1",
-    "less-loader": "^6.2.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "postcss": "^8.4.8",
     "qiniu": "^7.4.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
