fix: trust host judgement

--- a/src/config.json
+++ b/src/config.json
@@ -1,20 +1,18 @@
 {
-  "website_url": "https://pixiviz.pwp.app",
+  "website_url": "https://pixiviz.xyz",
   "public_proxy": "i.pixiv.re",
   "image_proxy_host": "pixiv-image.pwp.link",
   "download_proxy_host": "pixiv-image.pwp.link",
   "remote_conf_url": "https://cfs.tigo.pwp.app/pixiviz-prod.json",
   "api_prefix": [
-    "/api/v1",
     "https://pixiviz-api-hk.pwp.link/v1",
     "https://pixiviz-api-us.pwp.link/v1",
-    "https://pixiviz-api-tc.pwp.link/v1",
     "https://pixiviz-api-rn.pwp.link/v1"
   ],
   "guide_url": "https://io.backrunner.top/2020/07/27/Pixiviz%E9%A3%9F%E7%94%A8%E6%8C%87%E5%8D%97.html",
   "donate_url": "https://afdian.net/@backrunner",
   "landing_bg_id": 94067980,
-  "trust_host": "pixiviz.pwp.app",
+  "trust_host": ["pixiviz.pwp.app", "pixiviz.xyz"],
   "announcement_feed": "https://cfs.tigo.pwp.app/pixiviz-anno-prod.json",
   "afdian_manage_api": "https://afdian-manage.pwp.app",
   "maintain": {
