feat: enhance filter

--- a/src/config.json
+++ b/src/config.json
@@ -15,6 +15,9 @@
   "trust_host": ["pixiviz.pwp.app", "pixiviz.xyz"],
   "announcement_feed": "https://cfs.tigo.pwp.app/pixiviz-anno-prod.json",
   "afdian_manage_api": "https://afdian-manage.pwp.app",
+  "show_guide": false,
+  "show_donate": false,
+  "check_announce": true,
   "maintain": {
     "enable": false
   }
