--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "compress-svg": "npx svgo ./src/assets/icons"
   },
   "dependencies": {
-    "@better-scroll/core": "^2.4.2",
+    "@better-scroll/core": "^2.5.0",
     "@pwp-app/better-element-ui": "^2.15.7",
     "@pwp-app/vue-context-menu": "^1.3.1",
     "@pwp-app/vue-lazyload": "^1.3.4",
     "axios": "^0.24.0",
     "clipboard-polyfill": "^3.0.3",
-    "core-js": "^3.25.0",
+    "core-js": "^3.25.5",
     "dayjs": "^1.11.5",
     "hash-wasm": "^4.9.0",
     "jszip": "^3.10.1",
@@ -49,7 +49,7 @@
     "register-service-worker": "^1.7.2",
     "seedrandom": "^3.0.5",
     "share-token": "^0.1.1",
-    "vue": "^2.7.10",
+    "vue": "^2.7.12",
     "vue-cookies": "^1.8.1",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.6.5",
@@ -59,7 +59,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
+    "@babel/eslint-parser": "^7.19.1",
     "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "^4.5.19",
     "@vue/cli-plugin-e2e-cypress": "^4.5.19",
@@ -73,11 +73,13 @@
     "cross-env": "^7.0.3",
     "cypress": "^6.9.1",
     "f2elint": "^1.2.3",
+    "html-webpack-plugin": "^4.5.2",
+    "jindan-webpack-plugin": "^0.2.1-f2",
     "less": "^3.13.1",
     "less-loader": "^6.2.0",
     "qiniu": "^7.7.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.12"
   },
   "browserslist": [
     "> 1%",
