--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "pixiviz",
-  "version": "1.29.2",
+  "version": "1.30.0",
   "scripts": {
     "serve": "node ./tools/sensitiveWordsGen.js && vue-cli-service serve",
-    "build": "node ./tools/processVersion.js && vue-cli-service build",
+    "build": "node ./tools/processVersion.js && set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "test:e2e": "vue-cli-service test:e2e",
     "analyze": "cross-env ANALYZE=true vue-cli-service build",
     "dev": "npm run serve",
