--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "upload:anno-dev": "npm run push:anno-dev",
     "upload:proxy": "npm run push:proxy",
     "upload:proxy-dev": "npm run push:proxy-dev",
-    "f2elint-scan": "f2elint scan",
-    "f2elint-fix": "f2elint fix",
-    "compress-svg": "npx svgo ./src/assets/icons"
+    "compress-svg": "npx svgo ./src/assets/icons",
+    "lint": "eslint ./src --ext=.js,.vue",
+    "lint-fix": "eslint ./src --ext=.js,.vue --fix"
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
@@ -34,14 +34,14 @@
     "@pwp-app/vue-lazyload": "^1.3.4",
     "axios": "^0.24.0",
     "clipboard-polyfill": "^3.0.3",
-    "core-js": "^3.33.0",
+    "core-js": "^3.33.3",
     "dayjs": "^1.11.10",
-    "hash-wasm": "^4.9.0",
+    "hash-wasm": "^4.11.0",
     "jszip": "^3.10.1",
     "level-js": "^6.1.0",
     "levelup": "^5.1.1",
     "lodash-es": "^4.17.21",
-    "nanoid": "^3.3.6",
+    "nanoid": "^3.3.7",
     "pixland": "^0.1.3",
     "qrcode-svg": "^1.1.0",
     "qs": "^6.11.2",
@@ -49,7 +49,7 @@
     "register-service-worker": "^1.7.2",
     "seedrandom": "^3.0.5",
     "share-token": "^0.1.1",
-    "vue": "^2.7.14",
+    "vue": "^2.7.15",
     "vue-cookies": "^1.8.3",
     "vue-infinite-loading": "^2.4.5",
     "vue-router": "^3.6.5",
@@ -58,7 +58,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.15",
+    "@babel/eslint-parser": "^7.23.3",
     "@gfx/zopfli": "^1.0.15",
     "@vue/cli-plugin-babel": "^4.5.19",
     "@vue/cli-plugin-e2e-cypress": "^4.5.19",
@@ -71,14 +71,17 @@
     "compression-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.3",
     "cypress": "^6.9.1",
-    "f2elint": "^1.2.3",
+    "eslint": "^8.54.0",
+    "eslint-config-alloy": "^5.1.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "html-webpack-plugin": "^4.5.2",
     "jindan-webpack-plugin": "^0.2.6",
     "less": "^3.13.1",
     "less-loader": "^6.2.0",
-    "qiniu": "^7.9.0",
+    "prettier": "^3.1.0",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.15"
   },
   "browserslist": [
     "> 1%",
