feat: add remote switches

--- a/src/config.json
+++ b/src/config.json
@@ -11,8 +11,10 @@
   "trust_host": ["pixiviz.pwp.app", "pixiviz.xyz"],
   "announcement_feed": "https://cfs.tigo.pwp.app/pixiviz-anno-prod.json",
   "afdian_manage_api": "https://afdian-manage.pwp.app",
-  "show_guide": true,
-  "show_donate": true,
+  "show_github": false,
+  "show_guide": false,
+  "show_donate": false,
+  "show_sponsor": false,
   "check_announce": true,
   "maintain": {
     "enable": false
